--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,10 @@ minima:
   nav_pages:
     - about.md
     - portfolio.md
+  social_links:
+    - title: Страничка автора ВК
+      icon: vk
+      url: "https://vk.com/clonikl/"
+    - title: Автор в тг
+      icon: telegram
+      url: "https://t.me/clonikl"
