--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Егор Роланд написал.
+title: Егор Роланд написал
 email: i@roland-e.ru
 description: >- # this means to ignore newlines until "baseurl:"
-  Личный блог. 
+  Личный блог
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 telegram_username: clonikl
